--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -24,12 +24,13 @@
 %\KpFonts
 %\LatinModernFonts
 %\LibertinusFonts
+\NewComputerModernFonts
 %\STIXTwoFonts
 %\BonumFonts
 %\PagellaFonts
 %\ScholaFonts
 %\TermesFonts
-\XITSFonts
+%\XITSFonts
 
 \NewDocumentCommand{\ShowFontA}{m m m}{%
 {#1\fontseries{#2}\fontshape{#3}\selectfont%
