--- a/tests/math.tex
+++ b/tests/math.tex
@@ -24,12 +24,13 @@
 %\KpFonts
 %\LatinModernFonts
 %\LibertinusFonts
+\NewComputerModernFonts
 %\STIXTwoFonts
 %\BonumFonts
 %\PagellaFonts
 %\ScholaFonts
 %\TermesFonts
-\XITSFonts
+%\XITSFonts
 
 %-----------------------------------------------------------------
 \title{Font tests}
