generate math pdfs in hdtv and kindle paperwhite sizes

--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -16,7 +16,7 @@
 \geomLandscape
 
 %\AsanaFonts
-%\CormorantFonts
+\CormorantFonts
 %\EBGaramondFonts
 %\ErewhonFonts
 %\FiraFonts
@@ -24,7 +24,7 @@
 %\KpFonts
 %\LatinModernFonts
 %\LibertinusFonts
-\NewComputerModernFonts
+%\NewComputerModernFonts
 %\STIXTwoFonts
 %\BonumFonts
 %\PagellaFonts
