--- a/tests/math.tex
+++ b/tests/math.tex
@@ -11,20 +11,21 @@
 %% arara: clean: { extensions: [ idx, ilg, ind, xdy, ] }
 %% arara: clean: { extensions: [ plCode, plData, plMath, plExercise, plNote, plQuote, ] }
 %-----------------------------------------------------------------
-\documentclass[12pt]{PalisadesLakesArticle}
+\documentclass{PalisadesLakesArticle}
+%\geomKindlePaperWhite
 \geomHDTV
 \geomLandscape
 
-%\AsanaFonts
-%\CormorantFonts
-%\EBGaramondFonts
+%\AsanaFonts % misssing \mathhyphen; less on page than Cormorant/Garamond
+\CormorantFonts % very light
+%\EBGaramondFonts % is this duffner or pardo?
 %\ErewhonFonts
-%\FiraFonts
+%\FiraFonts % tall lines, all sans, much less per page
 %\GFSNeohellenicFonts
 %\KpFonts
 %\LatinModernFonts
 %\LibertinusFonts
-\NewComputerModernFonts
+%\NewComputerModernFonts
 %\STIXTwoFonts
 %\BonumFonts
 %\PagellaFonts
